syncing with local and remote branch

--- a/Ecommerce/EcommerceUI/src/app/Components/shopping-cart/shopping-cart.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/shopping-cart/shopping-cart.component.html
@@ -7,10 +7,10 @@
     <th>Product Id</th>
     <th>Cart Total</th>
   </tr>
-  <!-- <tr *ngFor="let prod of shoppingCartList">
+  <tr *ngFor="let prod of shoppingCartList">
     <td>{{ prod.cartid }}</td>
     <td>{{ prod.userid }}</td>
     <td>{{ prod.productid }}</td>
     <td>{{ prod.carttotal }}</td>
-  </tr> -->
+  </tr>
 </table>
