--- a/Ecommerce/EcommerceUI/src/app/Components/pages/signup/signup.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/pages/signup/signup.component.html
@@ -1,1 +1,47 @@
-<p>signup works!</p>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="Yinka Enoch Adedokun">
+	<title>Login Page</title>
+</head>
+<body>
+	<!-- Main Content -->
+	<div class="container-fluid">
+		<div class="row main-content bg-success text-center">
+			<div class="col-md-4 text-center company__info">
+				<span class="company__logo"><h2><span class="fa fa-android"></span></h2></span>
+				<h4 class="company_title">Your Company Logo</h4>
+			</div>
+			<div class="col-md-8 col-xs-12 col-sm-12 login_form ">
+				<div class="container-fluid">
+					<div class="row">
+						<h2>Sign Up</h2>
+					</div>
+					<div class="row">
+						<form control="" class="form-group" [formGroup]="signupForm" (ngSubmit)="signUp()">
+							<div class="row">
+								<input formControlName="username" type="text" name="username" id="username" class="form__input" placeholder="Username">
+							</div>
+							<div class="row">
+								<input formControlName="password" type="password" name="password" id="password" class="form__input" placeholder="Password">
+							</div>
+                            <div class="row">
+								<input formControlName="email" type="email" name="email" id="email" class="form__input" placeholder="Email">
+							</div>
+							<div class="row">
+                                <input formControlName="address" type="text" name="address" id="address" class="form__input" placeholder="Address">
+							</div>
+							<div class="row">
+								<input type="submit" value="Submit" class="btn">
+							</div>
+						</form>
+					</div>
+					<div class="row">
+						<p>Already have an account? <a routerLink="/login" >Login Here</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+</body>
