--- a/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.css
+++ b/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.css
@@ -30,3 +30,14 @@
     height: 15vw;
     object-fit: cover;
 }
+
+html, body {
+	width: 100%;
+	height: 100%;
+}
+
+body {
+	padding: 1rem 0;
+	background: #f9f9fb;
+}
+
