--- a/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.html
@@ -15,7 +15,34 @@
     <button class="btn btn-primary" >Add to cart</button>
   </mat-card>
   </div>
-  
+  <div class="card hover">
+	<div class="card-img" style="background-image:url(https://images.unsplash.com/photo-1493847242172-d46053a1f671?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=9f91dd5d50f16ba80af53a62d4caf2ce&auto=format&fit=crop&w=500&q=60);">
+		<div class="overlay">
+			<div class="overlay-content">
+				<a class="hover" href="#!">View Project</a>
+			</div>
+		</div>
+	</div>
+	
+	<div class="card-content">
+		<a href="#!">
+			<h2>Title</h2>
+			<p>Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
+		</a>
+	</div>
+</div>
+
+<div class="card">
+	<div class="card-img" style="background-image:url(https://images.unsplash.com/photo-1491374812364-00028bbe7d2f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a22e4862c36c552e726815949fbcb41a&auto=format&fit=crop&w=500&q=60);">
+		<div class="overlay">
+			<div class="overlay-content">
+				<a href="#!">View Project</a>
+			</div>
+		</div>
+	</div>
+	
+
+
  
 
    
