--- a/Ecommerce/EcommerceUI/src/app/app.component.html
+++ b/Ecommerce/EcommerceUI/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-products></app-products>
-
+<app-shopping-cart></app-shopping-cart>
+<app-wishlist></app-wishlist>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
