sign up component working successfully and data is stored in the database

--- a/Ecommerce/EcommerceUI/src/app/Components/pages/login/login.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/pages/login/login.component.html
@@ -24,11 +24,11 @@
 						<form control="" class="form-group">
 							<div class="row">
 								<input type="text" name="username" id="username" class="form__input"
-									placeholder="Username" [(ngModel)]="username">
+									placeholder="Username" >
 							</div>
 							<div class="row">
 								<input type="password" name="password" id="password" class="form__input"
-									placeholder="Password" [(ngModel)]="password">
+									placeholder="Password" >
 							</div>
 							<div class="row">
 								<input type="submit" value="Submit" class="btn" (click)="checkLogin()" />
