--- a/Ecommerce/EcommerceUI/src/app/app.component.html
+++ b/Ecommerce/EcommerceUI/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
 <app-products></app-products>
 
-<app-footer></app-footer>
+<app-footer></app-footer> -->
 <router-outlet></router-outlet>
