--- a/Ecommerce/EcommerceUI/src/app/Components/shopping-cart/shopping-cart-item/shopping-cart-item.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/shopping-cart/shopping-cart-item/shopping-cart-item.component.html
@@ -3,14 +3,16 @@
     <img
       class="img-responsive"
       alt="prewiew"
-      style="height: 60%; width: 60%z"
+      style="height: 60%; width: 60%"
       src="../../../../assets/iphone.png"
     />
   </div>
   <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-6">
-    <h4 class="product-name"><strong>Apple iPhone 13 Pro</strong></h4>
+    <h4 class="product-name">
+      <strong>{{ productList?.productname }}</strong>
+    </h4>
     <h4>
-      <small class="product-description">Memory: 128GB ROM </small>
+      <small class="product-description">{{ productList?.memory }} </small>
     </h4>
   </div>
   <div
@@ -18,7 +20,10 @@
   >
     <div class="col-4 col-sm-4 col-md-6 text-md-right" style="padding-top: 5px">
       <h6>
-        <strong>55000 INR <span class="text-muted">x</span></strong>
+        <strong
+          >{{ productList?.price }} INR
+          <span class="text-muted">x</span></strong
+        >
       </h6>
     </div>
     <div class="col-4 col-sm-4 col-md-4">
