--- a/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.css
+++ b/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.css
@@ -16,6 +16,7 @@
     margin: 20px;
     border: black;
     
+    
     align-items: center;
 }
 .product > mat-card > button{
@@ -23,12 +24,17 @@
     background-color: blue;
     border: 1px solid;
     border-color: #a88134 #9c7e31 #846a29;
+    
 
+}
+.card{
+    margin: 7px;
 }
 .card-img-top{
     width: 100%;
-    height: 15vw;
+    height: 20vw;
     object-fit: cover;
+    
 }
 
 html, body {
@@ -39,5 +45,10 @@ html, body {
 body {
 	padding: 1rem 0;
 	background: #f9f9fb;
+}
+
+.card:hover{
+    transform: scale(1.05);
+ box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
 
