--- a/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
@@ -67,7 +67,7 @@
           data-target=".navbar-collapse"
         ></button>
       </div>
-      <div class="navbar-collapse collapse">
+      <div class="navbar-collapse collapse  navbar-dark bg-dark">
         <ul class="nav navbar-nav">
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop page</a></li>
