--- a/Ecommerce/EcommerceUI/src/app/Components/shopping-cart/shopping-cart-container/shopping-cart-container.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/shopping-cart/shopping-cart-container/shopping-cart-container.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container" style="padding-top: 6rem;" *ngIf="cart">
+<div class="container" style="padding-top: 6rem" *ngIf="cart">
   <div class="card shopping-cart">
     <div class="card-header bg-dark text-light">
       <i class="fa fa-shopping-cart pr-2" aria-hidden="true"></i>
@@ -6,33 +6,13 @@
       <div class="clearfix"></div>
     </div>
     <div class="card-body">
-      <app-shopping-cart-item *ngFor="let cartItem of cart" [product]="cartItem">
-
-      </app-shopping-cart-item>
+      <app-shopping-cart-item
+        *ngFor="let cartItem of cart"
+        [product]="cartItem"
+      ></app-shopping-cart-item>
       <h2 class="display-4 text-center" *ngIf="cart.length === 0">
-        There is no item in cart
+        There is no Item in the Cart
       </h2>
-    </div>
-    <div class="card-footer">
-      <div class="pull-right" style="margin: 10px">
-        <div class="pull-right" style="margin: 5px">
-          Total price: <b>{{totalPrice | priceFormatter}}$</b>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
-
-<div class="container" style="padding-top: 6rem">
-  <div class="card shopping-cart">
-    <div class="card-header bg-dark text-light">
-      <i class="fa fa-shopping-cart pr-2" aria-hidden="true"></i>
-      Shopping cart
-      <div class="clearfix"></div>
-    </div>
-    <div class="card-body">
-      <app-shopping-cart-item></app-shopping-cart-item>
-      <h2 class="display-4 text-center"></h2>
     </div>
     <div class="card-footer">
       <div class="pull-right" style="margin: 10px">
