--- a/Ecommerce/EcommerceUI/src/app/Components/shopping-cart/shopping-cart-item/shopping-cart-item.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/shopping-cart/shopping-cart-item/shopping-cart-item.component.html
@@ -4,15 +4,16 @@
       class="img-responsive"
       alt="prewiew"
       style="height: 60%; width: 60%"
-      src="../../../../assets/iphone.png"
+      src="
+      {{ product.product.imagepath }}"
     />
   </div>
   <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-6">
     <h4 class="product-name">
-      <strong>{{ productList?.productname }}</strong>
+      <strong>{{ product.product.productname }}</strong>
     </h4>
     <h4>
-      <small class="product-description">{{ productList?.memory }} </small>
+      <small class="product-description">{{ product.product.memory }} </small>
     </h4>
   </div>
   <div
@@ -20,15 +21,17 @@
   >
     <div class="col-4 col-sm-4 col-md-6 text-md-right" style="padding-top: 5px">
       <h6>
-        <strong
-          >{{ productList?.price }} INR
-          <span class="text-muted">x</span></strong
-        >
+        <strong>{{ product.product.price }} INR</strong>
       </h6>
     </div>
     <div class="col-4 col-sm-4 col-md-4">
       <div class="quantity">
-        <input type="button" value="+" class="plus" />
+        <input
+          (click)="onIncrementCartItem()"
+          type="button"
+          value="+"
+          class="plus"
+        />
         <input
           [value]="1"
           [disabled]="true"
@@ -40,11 +43,20 @@
           class="qty"
           size="4"
         />
-        <input type="button" value="-" class="minus" />
+        <input
+          (click)="onDecrementCartItem()"
+          type="button"
+          value="-"
+          class="minus"
+        />
       </div>
     </div>
     <div class="col-2 col-sm-2 col-md-2 text-right">
-      <button type="button" class="btn btn-outline-danger btn-xs">
+      <button
+        (click)="onRemoveCartItem()"
+        type="button"
+        class="btn btn-outline-danger btn-xs"
+      >
         <i class="fa fa-trash"></i>
       </button>
     </div>
