Adding Total price functionality in shopping cart

--- a/Ecommerce/EcommerceUI/src/app/Components/shopping-cart/shopping-cart-container/shopping-cart-container.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/shopping-cart/shopping-cart-container/shopping-cart-container.component.html
@@ -16,7 +16,9 @@
     </div>
     <div class="card-footer">
       <div class="pull-right" style="margin: 10px">
-        <div class="pull-right" style="margin: 5px">Total price: 55000 INR</div>
+        <div class="pull-right" style="margin: 5px">
+          Total price: {{ totalPrice }} INR
+        </div>
       </div>
     </div>
   </div>
