Removing weather forecast controller

--- a/Ecommerce/EcommerceUI/src/app/Components/shopping-cart/shopping-cart-container/shopping-cart-container.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/shopping-cart/shopping-cart-container/shopping-cart-container.component.html
@@ -17,7 +17,7 @@
     <div class="card-footer">
       <div class="pull-right" style="margin: 10px">
         <div class="pull-right" style="margin: 5px">
-          Total price: {{ totalPrice }} INR
+          <h5>Total price: {{ totalPrice }} INR</h5>
         </div>
       </div>
     </div>
