admin features commit

--- a/Ecommerce/EcommerceUI/src/app/Components/Admin/add-product/add-product.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/Admin/add-product/add-product.component.html
@@ -1,3 +1,74 @@
+<!-- <div class="container">
+  <form id="contact">
+    <h3>Welcome Admin!!</h3>
+    <h4>Add Product</h4>
+    <fieldset>
+      <input
+        placeholder="Product name"
+        type="text"
+        [(ngModel)]="model.productname"
+      />
+    </fieldset>
+    <fieldset>
+      <input placeholder="Quantity" type="text" [(ngModel)]="model.quantity" />
+    </fieldset>
+    <fieldset>
+      <input placeholder="Price" type="text" [(ngModel)]="model.price" />
+    </fieldset>
+    <fieldset>
+      <input
+        placeholder="Image Path"
+        type="text"
+        [(ngModel)]="model.imagepath"
+      />
+    </fieldset>
+    <fieldset>
+      <input
+        placeholder="Product Rating"
+        type="text"
+        [(ngModel)]="model.productrating"
+      />
+    </fieldset>
+    <fieldset>
+      <input
+        type="text"
+        [(ngModel)]="model.productofferprice"
+        placeholder="Product Offer Price"
+      />
+    </fieldset>
+    <label>Product Description</label>
+    <fieldset>
+      <input placeholder="Display" type="text" [(ngModel)]="model.display" />
+    </fieldset>
+    <fieldset>
+      <input placeholder="Memory" type="text" [(ngModel)]="model.memory" />
+    </fieldset>
+    <fieldset>
+      <input
+        placeholder="Processor"
+        type="text"
+        [(ngModel)]="model.processor"
+      />
+    </fieldset>
+    <fieldset>
+      <input placeholder="Camera" type="text" [(ngModel)]="model.camera" />
+    </fieldset>
+
+    <fieldset>
+      <input placeholder="Security" type="text" [(ngModel)]="model.security" />
+    </fieldset>
+
+    <fieldset>
+      <input
+        type="button"
+        value="Add Product"
+        class="btn btn-primary"
+        (click)="submit()"
+      />
+    </fieldset>
+  </form>
+</div> -->
+
 <table>
   <tr>
     <td>Product Name</td>
