--- a/Ecommerce/EcommerceUI/src/app/app.component.html
+++ b/Ecommerce/EcommerceUI/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <!-- <app-products></app-products> -->
 <app-footer></app-footer>
-<!-- <app-add-product></app-add-product> -->
+<app-add-product></app-add-product>
 <app-list-products></app-list-products>
 <router-outlet></router-outlet>
 
