--- a/Ecommerce/EcommerceUI/src/app/Components/wishlist/wishlist-item/wishlist-item.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/wishlist/wishlist-item/wishlist-item.component.html
@@ -34,7 +34,9 @@
       </button>
     </div>
     <div class="col-4 col-sm-4 col-md-4 text-right">
-      <button class="btn btn-success" type="button">Add to Cart</button>
+      <button class="btn btn-success" type="button" (click)="addToCart()">
+        Add to Cart
+      </button>
     </div>
   </div>
 </div>
