Changes after merge

--- a/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.html
@@ -8,8 +8,8 @@
 			<div class="card-body">
 			  <h5 class="card-title">{{prd.productname}}</h5>
 			  <p class="card-text">{{prd.productrating}}</p>
-			  <p class="card-text">{{prd.price|currency:'INR'}}</p>
-			  <p class="card-text">{{prd.productofferprice|currency:'INR'}}</p>
+			  <p class="card-text">{{prd.price}}</p>
+			  <p class="card-text">{{prd.productofferprice}}</p>
 			  <a href="#" type="button" class="btn btn-primary" (click)="submit(prd.productid)" >Add to cart</a>
 			  <br>
 			  <br>
