--- a/Ecommerce/EcommerceUI/src/app/Components/pages/product-details/product-details.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/pages/product-details/product-details.component.html
@@ -1,8 +1,9 @@
 
 <div class="row">
-<div class='product--pink'>
+<div class='product--green'>
   <div class='product_inner'>
     <img src="{{Product.imagepath}}" width='300'>
+    <h2>{{Product.productname}}</h2>
     <ul>
       <li>{{Product.display}}</li>
       <li>{{Product.memory}}</li>
