--- a/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.html
@@ -9,7 +9,7 @@
         <p class="card-text">{{ prd.price | currency: "INR" }}</p>
         <p class="card-text">{{ prd.productofferprice | currency: "INR" }}</p>
         <a
-          href="#"
+          href="/products"
           type="button"
           class="btn btn-primary"
           (click)="submit(prd.productid)"
@@ -18,7 +18,7 @@
         <br />
         <br />
         <a
-          href="#"
+          href="/products"
           type="button"
           class="btn btn-primary"
           (click)="submittowishlist(prd.productid)"
