--- a/Ecommerce/EcommerceUI/src/app/Components/pages/signup/signup.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/pages/signup/signup.component.html
@@ -1,47 +1,85 @@
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="author" content="Yinka Enoch Adedokun">
-	<title>Login Page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="author" content="Yinka Enoch Adedokun" />
+  <title>Login Page</title>
 </head>
 <body>
-	<!-- Main Content -->
-	<div class="container-fluid">
-		<div class="row main-content bg-success text-center">
-			<div class="col-md-4 text-center company__info">
-				<span class="company__logo"><h2><span class="fa fa-android"></span></h2></span>
-				<h4 class="company_title">Your Company Logo</h4>
-			</div>
-			<div class="col-md-8 col-xs-12 col-sm-12 login_form ">
-				<div class="container-fluid">
-					<div class="row">
-						<h2>Sign Up</h2>
-					</div>
-					<div class="row">
-						<form control="" class="form-group"  >
-							<div class="row">
-								<input  type="text" name="username" id="username" class="form__input" placeholder="Username" [(ngModel)]="model.username">
-							</div>
-							<div class="row">
-								<input  type="password" name="password" id="password" class="form__input" placeholder="Password" [(ngModel)]="model.password">
-							</div>
-                            <div class="row">
-								<input  type="email" name="email" id="email" class="form__input" placeholder="Email" [(ngModel)]="model.emailid">
-							</div>
-							<div class="row">
-                                <input  type="text" name="address" id="address" class="form__input" placeholder="Address" [(ngModel)]="model.address">
-							</div>
-							<div class="row">
-								<input type="submit" value="Submit" class="btn" (click)="signUp()">
-							</div>
-						</form>
-					</div>
-					<div class="row">
-						<p>Already have an account? <a routerLink="/login" >Login Here</a></p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	
+  <!-- Main Content -->
+  <div class="container-fluid">
+    <div class="row main-content bg-success text-center">
+      <div class="col-md-4 text-center company__info">
+        <span class="company__logo"
+          ><h2><span class="fa fa-android"></span></h2
+        ></span>
+        <h4 class="company_title">Your Company Logo</h4>
+      </div>
+      <div class="col-md-8 col-xs-12 col-sm-12 login_form">
+        <div class="container-fluid">
+          <div class="row">
+            <h2>Sign Up</h2>
+          </div>
+          <div class="row">
+            <form control="" class="form-group">
+              <div class="row">
+                <input
+                  type="text"
+                  name="username"
+                  id="username"
+                  class="form__input"
+                  placeholder="Username"
+                  [(ngModel)]="model.username"
+                />
+              </div>
+              <div class="row">
+                <input
+                  type="password"
+                  name="password"
+                  id="password"
+                  class="form__input"
+                  placeholder="Password"
+                  [(ngModel)]="model.password"
+                />
+              </div>
+              <div class="row">
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  class="form__input"
+                  placeholder="Email"
+                  [(ngModel)]="model.emailid"
+                />
+              </div>
+              <div class="row">
+                <input
+                  type="text"
+                  name="address"
+                  id="address"
+                  class="form__input"
+                  placeholder="Address"
+                  [(ngModel)]="model.address"
+                />
+              </div>
+              <div class="row">
+                <input
+                  [routerLink]="['/login']"
+                  routerLinkActive="router-link-active"
+                  type="submit"
+                  value="Submit"
+                  class="btn"
+                  (click)="signUp()"
+                />
+              </div>
+            </form>
+          </div>
+          <div class="row">
+            <p>
+              Already have an account? <a routerLink="/login">Login Here</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
