--- a/Ecommerce/EcommerceUI/src/app/Components/pages/product-details/product-details.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/pages/product-details/product-details.component.html
@@ -12,12 +12,11 @@
       <li>{{Product.battery}}</li>
       <li>{{Product.security}}</li>
     </ul>
-    <button class="addtocart">Add to cart</button>
+    <button (click)="submittocart(Product.productid)">Add to cart</button>
+    <button (click)="submittowishlist(Product.productid)">Add to wishlist</button>
+    
   </div>
-  <div class='product_overlay'>
-    <h2>Added to basket</h2>
-    <i class='fa fa-check'></i>
-  </div>
+  
 </div>
 </div>
 
