--- a/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.css
+++ b/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.css
@@ -1,54 +1,85 @@
-.products{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
 
-.product > mat-card > img{
-    object-fit: contain;
-    height: 200px;
-}
-.product > mat-card{
-    display: flex;
-    flex-direction: column;
-    min-height: 350px;
-    width: 300px;
-    margin: 20px;
-    border: black;
-    
-    
-    align-items: center;
-}
-.product > mat-card > button{
-    margin-top: 20px;
-    background-color: blue;
-    border: 1px solid;
-    border-color: #a88134 #9c7e31 #846a29;
-    
 
-}
-.card{
-    margin: 7px;
-}
-.card-img-top{
-    width: 100%;
-    height: 20vw;
-    object-fit: cover;
-    
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans Condensed", sans-serif;
+  font-weight: 700;
 }
 
 html, body {
-	width: 100%;
-	height: 100%;
+  background: #EEE5E9;
 }
 
-body {
-	padding: 1rem 0;
-	background: #f9f9fb;
+.row {
+  width: 100%;
+  justify-content: flex-start;
+  display: flex;
+  flex-flow: row wrap;
 }
 
-.card:hover{
-    transform: scale(1.05);
- box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+.product,.product--green {
+  box-shadow: 1px 5px 15px #CCC;
+  width: 15em;
+  height: auto;
+  border-radius: 3px;
+  padding: 2em;
+  margin: 1em;
+  overflow: hidden;
+  position: relative;
+  flex: auto;
 }
 
+.product--green {
+  background: linear-gradient(-45deg, #70C1B3 50%, rgba(255, 255, 255, 0.5) 50%);
+}
+
+
+.product img,.product--green img {
+  max-width: 100%;
+  height: auto !important;
+  text-align: center;
+}
+.product_inner {
+  display: flex;
+  align-items: center;
+  flex-flow: column wrap;
+}
+.product_inner p {
+  color: rgba(39, 22, 22, 0.9);
+}
+.product_inner button {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  color: rgb(133, 74, 74);
+  border-radius: 3px;
+  padding: 1em 3em;
+  margin: 1em 0 0 0;
+  background: none;
+  cursor: pointer;
+  transition: background ease-in 0.25s;
+}
+/* .product--green:hover{
+  transform: scale(1.5);
+} */
+.product_inner button:hover {
+  background: white;
+  color: #2B2D42;
+}
+.product_inner button:before {
+  font-family: FontAwesome;
+  content: "";
+  color: #FFF;
+  position: absolute;
+  font-size: 1.5em;
+  margin: 0 -1.5em;
+}
+.product_inner button:hover:before {
+  color: #2B2D42;
+}
+p{
+  padding: 8px;
+  font-size: large;
+  font-family: 'Times New Roman', Times, serif;
+  color: darkslategrey;
+}
