--- a/Ecommerce/EcommerceUI/src/app/Components/header/header.component.css
+++ b/Ecommerce/EcommerceUI/src/app/Components/header/header.component.css
@@ -44,7 +44,7 @@ body {
 }
 
 .header-area {
-  background: none repeat scroll 0 0 rgb(124, 212, 124);
+  background: none repeat scroll 0 0 #f4f4f4;
 }
 .header-area a {
   color: rgb(74, 84, 66);
@@ -112,10 +112,10 @@ body {
   color: #5a88ca;
 }
 .shopping-item {
-  border: 1px solid rgb(255, 255, 255);
+  border: 1px solid #ddd;
   float: right;
   font-size: 18px;
-
+  margin-top: 40px;
   padding: 10px;
   position: relative;
 }
@@ -174,89 +174,4 @@ body {
 }
 .mainmenu-area .nav > li > a:focus {
   color: #fff;
-}
-
-header {
-  position: relative;
-  width: 100%;
-  top: 0;
-  margin-bottom: -50px;
-  display: flex;
-  justify-content: space-evenly;
-  place-items: center;
-  background-color: green;
-  z-index: 2;
-  padding-top: 10px;
-}
-
-header nav button {
-  background-color: transparent;
-  border: 0;
-  font-family: quicksand;
-  color: white;
-  text-transform: uppercase;
-  font-size: 1em;
-  cursor: pointer;
-  transition-delay: 0s;
-  transition-duration: 1s;
-}
-header nav button:hover {
-  color: yellowgreen;
-  transform: translate(0px, -4px);
-  text-shadow: 0 6px 6px rgba(0, 0, 0, 1);
-}
-.order-online {
-  width: 200px;
-  height: 50px;
-  border-radius: 25px;
-  border: 0;
-  background-color: yellowgreen;
-  color: white;
-  font-family: montserrat;
-  cursor: pointer;
-  transition: 0.6s;
-}
-.order-online:hover {
-  transform: translate(0px, -4px);
-  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2);
-}
-
-/* WAVES BENEATH HEADER */
-
-.waves {
-  transform: rotate(180deg) scale(1, 0.2);
-  position: relative;
-  width: 100%;
-  height: 15vh;
-  margin-bottom: -100px; /*Fix for safari gap*/
-  min-height: 200px;
-  max-height: 150px;
-  margin-top: -30px;
-}
-.parallax > use {
-  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
-}
-.parallax > use:nth-child(1) {
-  animation-delay: -2s;
-  animation-duration: 4s;
-}
-.parallax > use:nth-child(2) {
-  animation-delay: -3s;
-  animation-duration: 7s;
-}
-.parallax > use:nth-child(3) {
-  animation-delay: -4s;
-  animation-duration: 10s;
-}
-.parallax > use:nth-child(4) {
-  animation-delay: -5s;
-  animation-duration: 17s;
-}
-@keyframes move-forever {
-  0% {
-    transform: translate3d(-90px, 0, 0);
-  }
-  100% {
-    transform: translate3d(85px, 0, 0);
-  }
 }
